--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,111 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__title {
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Exchange Rate */
+.exchange-rate {
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.exchange-rate>div {
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+
+.exchange-rate__quote,
+.exchange-rate__base {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.exchange-rate__quote {
+  border-bottom: 1px solid #c9c4c4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.exchange-rate__base {
+  background-color: #eaebed;
+}
+
+.balance {
+  text-align: left;
+}
+
+.currency-select {
+  width: 60px;
+  padding: 3px 0;
+  outline: none;
+}
+
+.quantity {
+  flex: 1;
+  text-align: right;
+}
+
+.quantity input {
+  text-align: right;
+  font-size: 20px;
+  border: none;
+  background-color: transparent;
+  width: 100%;
+}
+
+.quantity input:focus {
+  outline: none;
+  border: none;
+}
+
+.exchange-rate .rate {
+  border: 1px solid green;
+  padding: 2px 12px;
+  border-radius: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+
+.exchange-btn {
+  text-align: left;
+  max-width: 600px;
+  margin: 15px auto;
+}
+
+.exchange-btn button {
+  width: 160px;
+  height: 40px;
+  background: #ff26b2;
+  border: none;
+  border-radius: 6px;
+  color: #fff;
+}
+
+.swap-icon {
+  position: absolute;
+  top: 50%;
+  right: -15px;
+  width: 30px;
+  height: 30px;
+  transform: translateY(-50%);
+  background-color: #fff;
+  border-radius: 30px;
+}
+
+.swap-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .App {
+    padding: 0 15px;
   }
 }
